--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 
     <h1>Aquí iría el titulo de la página</h1>
     <p>Esto es un parrafo</p>
+    <p>Esto es un segundo párrafo</p>
     
 </body>
 </html>
